@@ -4,6 +4,10 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* profile interpretation of make.defaults now has access to variables
+  defined by it's parents, per PMS.
+
+
 pkgcore 0.6.4: Jun 5th, 2011
 
 * intercept and suppress exceptions from triggers unless the trigger
